@@ -1,3 +1,15 @@
+2008-02-03  Tim Retout  <diocles@gnu.org>
+
+	* Makefile.am (install-data-local): Remove.  (Note that a backup of the
+	config file will no longer be taken during installation.)
+	(uninstall-local): Likewise.
+	(all-local): Likewise.
+	(sysconf_DATA): New variable for location of config file.
+	(CLEANFILES): Reference $(sysconf_DATA) variable.
+	(do_subst): New variable to hold the variable substitution command.
+	(enscript.cfg): Use $(do_subst).  Remove unnecessary $(srcdir) prefix
+	from enscript.cfg.in dependency.
+
 2008-01-29  Tim Retout  <diocles@gnu.org>
 
 	* Makefile.am (install-data-local): Prefix installation paths with
